--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug": "^2.6.6",
     "deep-equal": "^1.0.1",
     "graphql": "^0.10.4",
+    "graphql-relay": "^0.5.2",
     "graphql-type-json": "^0.1.4",
     "object.omit": "^2.0.1",
     "object.pick": "^1.2.0",
