--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "devDependencies": {
     "@tradle/custom-models": "https://github.com/tradle/custom-models",
     "@tradle/models": "https://github.com/tradle/models",
-    "@tradle/validate-model": "tradle/validate-model",
-    "@tradle/validate-resource": "tradle/validate-resource",
+    "@tradle/validate-model": "^2.0.2",
+    "@tradle/validate-resource": "^2.3.0",
     "eslint": "^3.19.0",
     "husky": "^0.13.3",
     "tape": "^4.6.3"
@@ -20,7 +20,7 @@
     "prepush": "npm test"
   },
   "dependencies": {
-    "@tradle/build-resource": "^2.0.0",
+    "@tradle/build-resource": "^2.2.0",
     "clone": "^2.1.1",
     "co": "^4.6.0",
     "debug": "^2.6.6",
