--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@tradle/build-resource": "^2.2.0",
+    "@tradle/constants": "^2.1.0",
     "clone": "^2.1.1",
     "co": "^4.6.0",
     "debug": "^2.6.6",
