--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@tradle/custom-models": "https://github.com/tradle/custom-models",
-    "@tradle/models": "https://github.com/tradle/models",
+    "@tradle/models": "github:tradle/models",
     "@tradle/validate-model": "^2.0.2",
     "@tradle/validate-resource": "^2.5.0",
     "eslint": "^3.19.0",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@tradle/build-resource": "^2.2.0",
     "@tradle/constants": "^2.1.0",
+    "@tradle/merge-models": "^2.1.0",
     "clone": "^2.1.1",
     "co": "^4.6.0",
     "debug": "^2.6.6",
