--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "devDependencies": {
     "@tradle/custom-models": "github:tradle/custom-models",
     "@tradle/engine": "^5.5.0",
-    "@tradle/models": "github:tradle/models#backlinks",
+    "@tradle/models": "github:tradle/models",
     "@tradle/models-corporate-onboarding": "github:tradle/models-corporate-onboarding",
-    "@tradle/validate-model": "^4.1.0",
-    "@tradle/validate-resource": "github:tradle/validate-resource#stubs",
+    "@tradle/validate-model": "^6.0.1",
+    "@tradle/validate-resource": "^3.0.0",
     "eslint": "^3.19.0",
     "husky": "^0.13.3",
     "tape": "^4.6.3"
@@ -22,7 +22,7 @@
     "prepush": "npm test"
   },
   "dependencies": {
-    "@tradle/build-resource": "github:tradle/build-resource#stubs",
+    "@tradle/build-resource": "^3.0.0",
     "@tradle/constants": "^2.1.0",
     "@tradle/merge-models": "^2.1.0",
     "co": "^4.6.0",
